--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,12 @@
     font-size: 16px !important;
   }
 }
+/* globals.css */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE/Edge */
+  scrollbar-width: none;     /* Firefox */
+}
