--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
     }
 
     body {
-        @apply font-inter font-normal text-black bg-white;
+        @apply font-gelasio font-normal text-black bg-white;
     }
 
     i {
